--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -7,6 +7,7 @@ tqdm>=4.66.0
 torch>=2.1.0
 torchvision>=0.16.0
 ultralytics>=8.0.0
+transformers>=4.35.0
 
 # Face recognition
 face-recognition>=1.3.0
