--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,7 +13,9 @@
     "url": "https://github.com/iliashad"
   },
   "scripts": {
-    "build": "tsc --outDir dist"
+    "build": "tsc --outDir dist",
+    "test": "NODE_ENV=testing vitest",
+    "test:ui": "NODE_ENV=testing  vitest --ui"
   },
   "repository": {
     "type": "git",
@@ -74,6 +76,7 @@
     "@types/react-dom": "^19.1.8",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.1",
+    "@vitest/ui": "^4.0.14",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.34.0",
@@ -91,6 +94,6 @@
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.41.0",
     "vite": "^7.1.3",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.14"
   }
 }
