--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -7,13 +7,16 @@
     "declarationMap": true,
     "rootDir": ".",
     "esModuleInterop": true,
-    "module": "ESNext",     
+    "module": "ESNext",
     "target": "ES2020",
     "outDir": "dist",
     "moduleResolution": "Node",
     "strict": true,
     "skipLibCheck": true,
-    "paths": { "@shared/*": ["./*"] }
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["./*"]
+    }
   },
   "include": ["**/*.ts"]
 }
